# CPP_programs

./: 101.cc  106.cc  107.cc  11.cc  41.cc  43.cc  44.cc  45.cc  46.cc  47.cc  48.cc  49.cc  85 (2).cc  85.cc  BMI.cc  bracketTest.txt  brackets.cc  check.cpp  check1.cpp  cor_fract.cc  desert.cc  locks.cpp  mega.cpp  mycomplex.cc  myfirst.cc  philosophers.cpp  queue.cc  ranges-v3-test.cpp  resultFile.txt  rev_pol_not.cc  stack.cc  task.cc  test.cc  test2.cc  test3.cc  test4.cc  test5.cc  testArray.cc  toAstro.cc  vectorND.cc
2048с++/: 2048main.cc  fullCheck.cc  shiftReaction.cc  support.h  supportFunc.cc
2048с++/card/: card.cc
CV/lesson1/: CMakeLists.txt  test.cpp
CV/task1/: CMakeLists.txt  task1.cpp
CV/task2/: CMakeLists.txt  optflow.cpp
ICPC/: 11.cc  13.cc  14.cc  15.cc  16.cc  17.cc  WAD1.cc  WAD2.cc  WAD3.cc  lab11.cc  lab12.cc  lab13.cc  lab21.cc  lab22.cc  lab23.cc  lab24.cc  lab31.cc  lab32.cc  lab33.cc  lab34.cc  lab4.cc  permut.cc  phoneBook.h  test.cc
ICPC/lab5/: 005.txt  01.txt  2step1.txt  2step2.txt  2step3.txt  Simpson.txt  exEuler.txt  exactSolution.txt  exeu1.txt  exeu2.txt  exeu3.txt  exsol1.txt  exsol2.txt  exsol3.txt  imEuler.txt  imeu1.txt  imeu2.txt  imeu3.txt  lab5.c  pyt.py  twoStepAdams.txt
ICPC/lab6/: lab4.cc  lab6.c  pyt.py  shooting.txt  shuttle.txt
Power&Magic/: CMakeLists.txt  cell.hpp  implementation.cpp  tactical.hpp  tactical_grid.cpp  test.cpp  unit.h  unit.hpp
Power&Magic/global/: CMakeLists.txt  terrain_features.hpp
Power&Magic/tactical/: CMakeLists.txt  lib.cpp  main.cpp  tactical_grid.hpp  terrain_features.hpp  test.cpp  tile.hpp
boost_asio/: client.cpp  client.hpp  connection.cpp  server.cpp  server.hpp  stdafx.cpp  stdafx.h  test.cpp
cpp20-test/: format.cpp  main.cpp  math.cppm  module.cppm  module_main.cpp  module_make.sh
cpp20-test/coroutines/: cancelable_main.cpp  generator.hpp  generator_main.cpp  producer_consumer_lst.hpp  producer_consumer_main.cpp  producer_consumer_natlst.hpp  resumable.hpp  resumable_main.cpp  sm.cpp  sm.hpp  state_machine.hpp  state_machine_main.cpp
diploma/client/: CMakeLists.txt  client.cpp
diploma/common/: utilities.cpp  utilities.hpp
diploma/src/: CMakeLists.txt  RiDE_server.cpp  RiDE_server.hpp  datablock.cpp  datablock.hpp  logger.cpp  logger.hpp  main.cpp  utilities.cpp  utilities.hpp
kormen_practice/algo/: CMakeLists.txt  abstract_sorter.hpp  chapter-12-2.hpp  chapter-4-1.hpp  chapter-7.hpp  main.cpp  searches.hpp  sorts.cpp  sorts.hpp  support.hpp  tests.cpp  tests.hpp
myList/: 1_linked_list.h  2_linked_list.h  myList.cc  myList.h
patterns/abstract_factory/: abstract_factory_test.cpp
patterns/adapter/: adapter_test.cpp
patterns/bridge/: bridge_test.cpp
(+21 files in other folders)
